--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,3 @@
-@use "sass:color";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Raleway&display=swap');
 
 
@@ -25,7 +24,29 @@ $border-radius: 8px;
 $border-white: 2px solid $white-color;
 $border-accent: 2px solid $accent-color;
 
+@mixin round-button{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    margin: $med-spacer;
+    text-align: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+@mixin round-button-child{
+    margin: 0;
+    font-size: 34px;
+}
+
+.round{
+    @include round-button;
+    .round-child{
+        @include round-button-child;
+    }
+}
 
 
 *{
